--- a/css/styles.css
+++ b/css/styles.css
@@ -7,3 +7,13 @@
 .services section {
   text-align: center;
 }
+
+@media(min-width: 1200px) {
+  h3 {
+    margin-top: 0;
+  }
+
+  .services section {
+    text-align: left;
+  }
+}
